# uex-datarunner

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: requirements.md
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: cancel_ocr.toml  check_uex_account.toml  clear_working_set.toml  delete_submitted_screenshots.toml  get_ocr_status.toml  hide_to_tray.toml  list_screenshots.toml  load_config.toml  load_working_set.toml  open_screenshot.toml  prefetch_commodities.toml  prefetch_data_parameters.toml  prefetch_terminals.toml  process_screenshots.toml  process_selected_screenshots.toml  save_working_set.toml  search_commodities.toml  submit_to_uex.toml
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  ocr_events.rs  screenshots.rs  state.rs  types.rs  uex_api.rs
src-tauri/src/foundry_ocr/: client.rs  hardware.rs  image.rs  json.rs  mod.rs  model.rs
src-tauri/src/tests/: fixtures.rs  live_ocr.rs  mod.rs  static_analysis.rs  unit_tests.rs
src/components/: ErrorBoundary.tsx  MainWorkspace.tsx  SetupWizard.tsx
src/lib/: ai-models.test.ts  ai-models.ts  backend.test.ts  backend.ts  commodity-session.test.ts  commodity-session.ts  desktop-shell.test.ts  ocr-parser.test.ts  ocr-parser.ts  screenshots.test.ts  screenshots.ts  (+8 more)
test-e2e/: app-shell.spec.ts  mock-ocr-workflow.spec.ts
(+10 files in other folders)
